Fix z-index issue with Add to Calendar.

--- a/src/blocks/dropdown/style.scss
+++ b/src/blocks/dropdown/style.scss
@@ -8,6 +8,6 @@
 		width: 100%;
 		top: 100%;
 		left: 0;
-		z-index: 20;
+		z-index: 1001;
 	}
 }
